# gdi-rust

./: Cargo.toml
src/: main.rs
src/gui/: event.rs  gui.rs  mod.rs  strings.rs  wnd_class.rs
